[package]
name = "extcap"
version = "0.2.0"
authors = ["Tomas Kukosa <tkeksa@gmail.com>"]
repository = "https://github.com/tkeksa/extcap-rs"
license = "Apache-2.0 OR MIT"
description = "Crate for writing extcap Wireshark plugins."
readme = "README.md"
keywords = ["extcap", "Wireshark", "pcap"]
categories = ["command-line-interface"]
edition = "2018"

exclude = [
  ".github",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
async-api = ["futures"]
ctrl-pipe = ["async-api", "tokio/fs", "tokio-util/codec"]

[dependencies]
bytes = "0.5.0"
clap = "2.33.3"
log = "0.4.14"
pcap-file = "1.1.1"
futures = { version = "0.3.12", optional = true }
tokio = { version = "0.2.25", optional = true }
tokio-util = { version = "0.3.1", optional = true }

[dev-dependencies]
ctrlc = "3.1.7"
rand = "0.8.3"
serialport = "3.3.0"
simplelog = "0.9.0"
futures = "0.3.12"
tokio-serial = "4.3.3"
tokio = { version = "0.2.25", features = ["macros", "rt-threaded"] }
tokio-util = { version = "0.3.1", features = ["codec"] }

[[example]]
name = "test_serial_dump"
required-features = ["async-api"]

[[example]]
name = "test_control_dump"
required-features = ["ctrl-pipe"]
