[package]
name = "extcap"
version = "0.3.0"
authors = ["Tomas Kukosa <tkeksa@gmail.com>"]
repository = "https://github.com/tkeksa/extcap-rs"
license = "Apache-2.0 OR MIT"
description = "Crate for writing extcap Wireshark plugins."
readme = "README.md"
keywords = ["extcap", "Wireshark", "pcap"]
categories = ["command-line-interface"]
edition = "2021"

exclude = [
  ".github",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
async-api = ["futures"]
ctrl-pipe = ["async-api", "tokio/fs", "tokio-util/codec"]

[dependencies]
bytes = "1.1.0"
clap = "3.0.5"
log = "0.4.14"
pcap-file = "1.1.1"
futures = { version = "0.3.19", optional = true }
tokio = { version = "1.15.0", optional = true }
tokio-util = { version = "0.6.9", optional = true }

[dev-dependencies]
ctrlc = "3.2.1"
rand = "0.8.4"
serialport = "4.0.1"
simplelog = "0.11.1"
futures = "0.3.19"
tokio-serial = "5.4.1"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.6.9", features = ["codec"] }

[[example]]
name = "test_serial_dump"
required-features = ["async-api"]

[[example]]
name = "test_control_dump"
required-features = ["ctrl-pipe"]
